# stadt

./: AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  commitlint.yml
.husky/: pre-commit
assets/shaders/: terrain.wgsl
bevy_stadt_terrain/: Cargo.toml
bevy_stadt_terrain/assets/shaders/: terrain_fragment.wgsl  terrain_vertex.wgsl
bevy_stadt_terrain/examples/: basic.rs
bevy_stadt_terrain/src/: config.rs  heightmap.rs  lib.rs  material.rs  mesh.rs  physics.rs  quadtree.rs  streaming.rs
docs/: terrain-research.md
src/game/: camera.rs  mod.rs  rail.rs  train.rs  village.rs
src/game/terrain/: material.rs  mesh.rs  mod.rs  systems.rs
